# selenium_avito

./: .gitignore  Makefile  README.md  docker-compose.yml
app/: Dockerfile  alembic.ini  help.txt  requirements.txt  run.sh
app/alembic/versions/: 033befcd0f2e_add_table_avito_sales_commercial.py  1bf5f353b3e3_create_urls_table.py  4521af7579d6_add_table_avito_sales_zu.py  9a16b61d28ac_add_table_avito_sales_house.py  a368ef6b40f7_add_table_avito_sales_garage.py  a865f2105d9f_add_table_avito_sales_flat.py  ca9700b82d8e_create_table_of_error_responsing_urls.py  f98befddc8cf_create_section.py
app/celery/: celeryd
app/crawler/: adCrawler.py  backoff.py  districts.txt  downloader.py  downloaderz.py  logger.py  models.py  pyproject.toml  request.py  requestz.py  run.py  settings.py  sites.py  spider.py  task.py  tasks-.py
app/crawler/repository/: postgresql.py
app/crawler/sql/: __init__.py  avito.py
app/tasks/: __init__.py  celery.py  tasks.py
db/: Dockerfile  movies_database.ddl
