[tool.poetry]
name = "avito crawler"
version = "0.1.0"
description = ""
authors = ["abdurahim <abdurahim.dag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
selenium = "^4.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
